--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+bcrypt==3.2.0
+cffi==1.14.5
 click==7.1.2
+cryptography==3.4.7
 Flask==1.1.2
 gunicorn==20.1.0
 itsdangerous==1.1.0
@@ -7,10 +10,15 @@ joblib==1.0.1
 MarkupSafe==1.1.1
 numpy==1.20.2
 pandas==1.2.4
+paramiko==2.7.2
+pycparser==2.20
+PyMySQL==1.0.2
+PyNaCl==1.4.0
 python-dateutil==2.8.1
 pytz==2021.1
 scikit-learn==0.24.2
 scipy==1.6.3
 six==1.15.0
+sshtunnel==0.4.0
 threadpoolctl==2.1.0
 Werkzeug==1.0.1
